# AlphaZero-2048

./: CMakeLists.txt  LICENSE  README.md  generator.cpp  generator.h  main.cpp  model.cpp  model.h  play.cpp  play.h  trainer.cpp  trainer.h
util/: logger.h
util/core/: env2048.h  mcts.h  mcts2048_common.h  replaybuffer.h  step.h
util/cuda/: encode2048.h  encode2048_cuda.cu
